Fix social media buttons on Safari

--- a/css/_social-media.scss
+++ b/css/_social-media.scss
@@ -34,6 +34,7 @@ $number-of-links-mobile: 4;
 
   .social-media__button {
     flex: 1 1 auto;
+    height: 100%;
     border-width: 1px;
     border-color: white;
     border-top-style: solid;
